--- a/Drone.yaml
+++ b/Drone.yaml
@@ -1,4 +1,4 @@
-#Drone CI File!
+#Drone CI File!!
 #Commit Message: Drone! Captain Canary is here! 
 
 kind: pipeline
@@ -6,7 +6,6 @@ type: kubernetes
 name: default
 
 steps:
-
 - name: build
   image: golang:1.13
   commands:
