--- a/Drone.yaml
+++ b/Drone.yaml
@@ -16,7 +16,7 @@ steps:
   image: plugins/docker
   settings:
     username:
-      from_secret: docker_username
+      from_secret: Muthusamy
     password:
       from_secret: docker_password
     repo: sarvan060394/dronetest
